add js dependencies

--- a/ng-sight/src/app/app.component.html
+++ b/ng-sight/src/app/app.component.html
@@ -297,7 +297,8 @@
     }
   }
 </style>
-
+ <app-navbar></app-navbar>
+ <app-sidebar></app-sidebar>
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img
