--- a/ng-sight/src/app/sidebar/sidebar.component.html
+++ b/ng-sight/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,11 @@
-<p>sidebar works!</p>
+<ul class="nav nav-pills flex-column">
+    <li class="nav-item">
+        <a class="nav-link" href="#">Sales Volum</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Orders</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">System Health</a>
+    </li>
+</ul>
