Setup Routign, Add ng2-Chars

--- a/ng-sight/src/app/sidebar/sidebar.component.html
+++ b/ng-sight/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-        <a class="nav-link" href="#">Sales Volum</a>
+        <a class="nav-link" routerLink="/sales">Sales Volum</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Orders</a>
+        <a class="nav-link" routerLink="/orders">Orders</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">System Health</a>
+        <a class="nav-link" routerLink="/health">System Health</a>
     </li>
 </ul>
