Add bar, pie Charts and update Styles

--- a/ng-sight/src/app/sections/section-sales/section-sales.component.html
+++ b/ng-sight/src/app/sections/section-sales/section-sales.component.html
@@ -1,4 +1,18 @@
-<p>section-sales works!</p>
-<p>section-sales works!</p>
-<p>section-sales works!</p>
-<p>section-sales works!</p>
+<div class="section-container">
+    <div class="cards">
+        <div class="card-deck">
+            <div class="card mp-3 shadow card-theme">
+                <h5>Daily Orders</h5>
+                <div class="card-body">
+                    <app-bar-chart></app-bar-chart>
+                </div>
+            </div>
+            <div class="card mp-3 shadow card-theme">
+                <h5>Orders By User</h5>
+                <div class="card-body">
+                    <app-pie-chart></app-pie-chart>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
