--- a/ng-sight/src/styles.css
+++ b/ng-sight/src/styles.css
@@ -26,3 +26,25 @@ a:hover{
 .section-container{
     padding:30px;
 }
+
+.card-theme{
+    background-color: #191f26;
+    border:none ;
+    border-radius: 2px;
+}
+
+.card-heading-theme{
+    color:#eee;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    padding: 12px;
+}
+
+.card-body-theme{
+    background-color: #494f56;
+}
+
+.cards{
+    display: flex;
+    flex-direction: column;
+}
