--- a/ng-sight/src/app/charts/line-chart/line-chart.component.html
+++ b/ng-sight/src/app/charts/line-chart/line-chart.component.html
@@ -1,1 +1,10 @@
-<p>line-chart works!</p>
+<div class="chart">
+    <canvas baseChart
+    [datasets]="lineChartData"
+    [labels]="lineChartLabels"
+    [options]="lineChartOptions"
+    [Legend]="lineChartLegend" 
+    [colors]="lineChartColors"
+    [chartType]="lineChartType">
+    </canvas>
+</div>
