--- a/ng-sight/src/app/sections/section-sales/section-sales.component.html
+++ b/ng-sight/src/app/sections/section-sales/section-sales.component.html
@@ -1,16 +1,30 @@
 <div class="section-container">
-    <div class="cards">
+    <div class="row-fluid cards">
         <div class="card-deck">
-            <div class="card mp-3 shadow card-theme">
-                <h5>Daily Orders</h5>
-                <div class="card-body">
-                    <app-bar-chart></app-bar-chart>
+            <div class="card mb-3 shadow card-theme">
+                <div class="card-header card-header-theme">
+                    <h5>Daily Orders</h5>
+                    <div class="card-body">
+                        <app-bar-chart></app-bar-chart>
+                    </div>
                 </div>
             </div>
-            <div class="card mp-3 shadow card-theme">
-                <h5>Orders By User</h5>
+            <div class="card mb-3 shadow card-theme">
+                <div class="card-header card-header-theme">
+                    <h5>Orders by State</h5>
+                    <div class="card-body">
+                        <app-pie-chart></app-pie-chart>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row-fluid cards">
+        <div class="card shadow card-theme card-bottom">
+            <div class="card-header card-header theme">
+                <h5>Monthly Sales by Product</h5>
                 <div class="card-body">
-                    <app-pie-chart></app-pie-chart>
+                    <app-line-chart></app-line-chart>
                 </div>
             </div>
         </div>
