--- a/ng-sight/src/styles.css
+++ b/ng-sight/src/styles.css
@@ -1,50 +1,56 @@
-*{
+* {
     box-sizing: border-box;
 }
-html{
+
+html {
     height: 100%;
 }
 
-body{
+body {
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: #1c222b;
-    color:#f7fff7;
-    height:100%;
+    background-color: #1C2228;
+    color: #f7fff7;
+    height: 100%;
 }
 
-a{
-    color:44a4cd;
-}
-a:hover{
-    columns:44a8cf;
+a {
+    color: #44a4cd;
 }
 
-.shadow{
-    box-shadow: 0 8px 12 px rgba(0,0,0,0.2), 0 5px 6px rgba(0,0,0,0.3) 
+a:hover {
+    color: #44a8cf;
 }
 
-.section-container{
-    padding:30px;
+.shadow {
+    box-shadow: 0 8px 12px rgba(0,0,0,0.2), 0 5px 6px rgba(0,0,0,0.3);
 }
 
-.card-theme{
-    background-color: #191f26;
-    border:none ;
+.section-container {
+    padding: 30px;
+}
+
+.card-theme {
+    background-color: #191F26;
+    border: none;
     border-radius: 2px;
 }
 
 .card-heading-theme{
-    color:#eee;
+    color: #eee;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
     padding: 12px;
 }
 
 .card-body-theme{
-    background-color: #494f56;
+    background-color: #494F56;
 }
 
-.cards{
+.cards {
     display: flex;
     flex-direction: column;
+}
+
+.section-container {
+    padding: 30px;
 }
