--- a/ng-sight/src/app/server/server.component.html
+++ b/ng-sight/src/app/server/server.component.html
@@ -1,9 +1,10 @@
-<div class="card mb-3 shadow block-status">
+<div class="card mb-3 shadow block-status" [ngStyle]="{'background-color':color}">
     <div class="card-header name">
         {{serverInput.name}}
     </div>
     <div class="card-body status">
         {{serverInput.isOnline}}
-    </div>
-    <button class="btn btn-default action">Toggle Status</button>
+    </div> 
+    <button (click)="toggleStatus()"
+            class="btn btn-default action">{{buttonText}}</button>
 </div>
