--- a/ng-sight/src/app/sections/section-orders/section-orders.component.html
+++ b/ng-sight/src/app/sections/section-orders/section-orders.component.html
@@ -15,14 +15,21 @@
             <tr *ngFor="let order of orders">
                 <td>{{order.id}}</td>
                 <td>{{order.customer.name}}</td>
-                <td>{{order.total}}</td>
+                <td>{{order.orderTotal}}</td>
                 <td>{{order.placed | date:'short'}}</td>
                 <td>{{order.fulfilled | date:'short'}}</td>
                 <td>{{order.status}}</td>
             </tr>
         </tbody>
     </table>
-
+    <app-pagination
+    (goPage)="goToPage($event)"
+    (goPrev)="goToPrevious()"
+    (goNext)="goToNext()"
+    [page]="page"
+    [perPage]="limit"
+    [count]="total">
+    </app-pagination>
 
 </div>
     
